Kubernetes/azurek8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project2team4-azurek8s
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-deployment
  template:
    metadata:
      labels:
        app: java-deployment
    spec:
      containers:
      - image: ijayzo/azuretest:latest
        # env:
        #   - name: REACT_URL
        #     value: http://34.70.19.242:3030
        #   - name: EMAIL_URL
        #     value: http://34.135.244.116:8079
        imagePullPolicy: Always
        name: javacontainer
        ports: 
        - containerPort: 8080


---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: java-service
  name: java
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - name: http-app1
      port: 8080
      targetPort: 8080
  selector:
    app: java-deployment
---
# apiVersion: monitoring.coreos.com/v1
# kind: ServiceMonitor
# metadata:
#   name: java-service-monitor
# spec:
#   selector:
#     matchLabels:
#       app: java-deployment
#   endpoints:
#     - port: http-app1
#       path: "/actuator/prometheus"
---
# containers:
#   - name: azuretest
#     image: ijayzo/azuretest:latest
#     ports:
#     - containerPort: 80
#     resources:
#       requests:
#         cpu: 250m
#       limits:
#         cpu: 500m
